# weather_alert_project

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
rainalert_app/: app.py  config.py  email_utils.py  filter_utils.py  weather_fetch.py
